# ntpclient

./: Cargo.toml  codesign.sh  question.md
.github/workflows/: rust.yml
src/: autostart.rs  boot.rs  lib.rs  main.rs  request.rs  utils.rs
