[package]
name = "ntpclient"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
auto-launch = "0.5.0"
base64 = "0.22.1"
curl = "0.4.47"
mac_address = "1.1.7"
whoami = "1.5.2"
windows-sys = { version = "0.59.0", features = [
    "Win32_System_SystemInformation",
] }

[target.'cfg(unix)'.dependencies.openssl]
version = "0.10"
features = ["vendored"]


[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"

[target.'cfg(unix)'.dependencies]
fork = "0.2.0"
